--- a/src/popup.html
+++ b/src/popup.html
@@ -7,6 +7,7 @@
 <body style="width:100vw;max-width:100%;height:100vh;">
 <br>
 <div  style="font-size: large;text-align:center;">
+    <h3><em>"The Russia"-nizer</em></h3>
 <p>Most importantly, please consider donating to Ukraine.</p>
     <p style="font-size: medium;">
         <a target="_blank" href="https://standforukraine.com/" >
