--- a/src/popup.html
+++ b/src/popup.html
@@ -1,24 +1,29 @@
 <!doctype html>
-    <html>
-    <title>"The Russia" Extension</title>
-    <meta charset="UTF-8">
-    <head>
-<style>
-    a {color: #FFE600;}
-    a:visited {color:#FFE600;}
-    a:active {color:yellow;}
-</style>
-    </head>
-<body style="width:1400px;max-width:100%;height:600px;background: url('../images/wood.jpg');">
+<html>
+<title>"The Russia" Extension</title>
+<meta charset="UTF-8">
+<head>
+    <style>
+        a {color: #FFE600; }
+        a:visited {color:#FFE600;}
+        a:active {color:yellow;}
+    </style>
+</head>
+<body style="width:1400px;max-width:100%;height:600px;background: linear-gradient(rgba(0,0,0,.25), rgba(0,0,0,.25)), url('../images/wood.jpg');">
 
 <table style="height: 100vh">
     <tr style="height: 100vh;">
         <td style="width: 1200px;  height: 89vh;">
-            <iframe src="https://standforukraine.com/" width="100%" height="100%" style="background: white"></iframe>
+
+            <iframe src="https://standforukraine.com/"
+                    id="myframe"
+                    width="100%" height="100%" style="background: white">
+            </iframe>
+
             <br>
         </td>
         <td style="width: 210px;  height: 89vh; color:white; font-weight: normal">
-            <div  style="font-size: large;text-align:center;width: 200px;height:95%;padding: 10px; vertical-align: middle;  ">
+            <div  style="font-size: large;text-align:center;width: 200px;height:74%;padding: 10px; vertical-align: middle;  ">
                 <div>
                     <br>
                     <h3>
@@ -27,26 +32,35 @@
                     </h3>
 
                 </div>
-                <hr><br>
-                <p>Most importantly: please consider donating to Ukraine.</p>
-                <p style="font-size: medium;">
-                    <a target="_blank" href="https://standforukraine.com/"  >
-                        Click here to open donation page in new tab (recommended).</a>
-                </p>
+                <hr>
+
                 <br>
                 <p style="text-align:center;font-size: medium;"><em>
                     <input type="checkbox" style="accent-color:#5F82FF" value="activated" id="Activated" />
-                    <label for="Activated">Enable extension (you will need to refresh the page)</label>
+                    <label for="Activated">Enable extension <br>(then refresh the page)</label>
                 </em>
                 </p>
-                <br><br>
-                <p style="font-size: small; color:white;">(And if you really want to...)</p>
+                <br>
+                <p style="font-size: medium;  ">
+                    <a target="_blank" href="https://standforukraine.com/" >
+                        Open donation page in new tab (recommended).
+                    </a>
+                </p>
+                <br>&nbsp;
+                <br>&nbsp;
+                <br>&nbsp;
+                <br>&nbsp;
+                <br>&nbsp;
+            </div>
+            <div>
+                <p style="font-size: x-small; color:white; text-align: center">
+                    (And if you really want to, of course...)</p>
                 <div style="text-align: center">
                     <script type='text/javascript' src='../external/KoFi.js'></script>
                     <script type='text/javascript' src="../external/runKoFi.js"></script>
                 </div>
 
-                    <br>
+                <br>
             </div>
         </td>
     </tr>
